Projetos pycharm adicionados

--- a/python_basico.ipynb
+++ b/python_basico.ipynb
@@ -15,7 +15,15 @@
    "execution_count": 2,
    "id": "0b6d5e8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello World!')"
    ]
@@ -25,7 +33,15 @@
    "execution_count": 3,
    "id": "cc8a7292",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oi beleza?\n"
+     ]
+    }
+   ],
    "source": [
     "print('Oi ' 'beleza?')"
    ]
@@ -35,7 +51,16 @@
    "execution_count": 4,
    "id": "a65eeaf3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oi\n",
+      "Boa noite!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Oi')\n",
     "print('Boa noite!')"
@@ -54,12 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e80ec345",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vezes 10\n",
+      "potência 32\n",
+      "real 2.5\n",
+      "inteiro 2\n",
+      "resto 1\n"
+     ]
+    }
+   ],
    "source": [
     "print('vezes', 2*5)\n",
     "print('potência', 2**5)\n",
@@ -70,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "1e8a25eb",
    "metadata": {},
    "outputs": [
@@ -110,7 +147,17 @@
    "execution_count": 9,
    "id": "553a297a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "c = 'isso é uma string'\n",
     "print(type(a))\n",
@@ -155,10 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37b9eee2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suco de laranja é meu favorito\n",
+      "Suco de limão e laranja são meus favoritos\n",
+      "Resultado: 5.667\n"
+     ]
+    }
+   ],
    "source": [
     "fruta = 'laranja'\n",
     "fruta2 = 'limão'\n",
@@ -180,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "e7b229db",
    "metadata": {},
    "outputs": [
@@ -204,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "d0a48733",
    "metadata": {},
    "outputs": [
@@ -247,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "a012e7ed",
    "metadata": {},
    "outputs": [
@@ -271,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "5655cdf1",
    "metadata": {},
    "outputs": [
@@ -306,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "acc7a1b2",
    "metadata": {},
    "outputs": [
@@ -336,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "7baab4b6",
    "metadata": {},
    "outputs": [
@@ -344,8 +401,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Informe um número: 4\n",
-      "O fatorial de 4 é 24\n"
+      "Informe um número: 54\n",
+      "O fatorial de 54 é 230843697339241380472092742683027581083278564571807941132288000000000000\n"
      ]
     }
    ],
@@ -372,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "d87935f7",
    "metadata": {},
    "outputs": [
@@ -393,10 +450,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c8302625",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'datetime.date' has no attribute 'isformat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misformat\u001b[49m(datetime\u001b[38;5;241m.\u001b[39mdate\u001b[38;5;241m.\u001b[39mtoday())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'datetime.date' has no attribute 'isformat'"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "datetime.date.isformat(datetime.date.today())"
@@ -404,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "02d0cecd",
    "metadata": {},
    "outputs": [],
@@ -415,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "bdbf1142",
    "metadata": {},
    "outputs": [],
@@ -433,38 +502,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "403e344f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parabéns a você\n",
-      "Muitas felicidades\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "parabens()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "bf1d17ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite uma frase: Eai meu nobre\n",
-      "Tem a letra U\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temLetraU()"
    ]
